 - Both still use the same textures and particle definition by default
- Changed how big cannon plumes look
- Changed description of some ponder categories
- Rework cannon plume to use better particles
- Changed default cannon mount angle goggle display precision from 1 to 2 digits
Fixed:
- Fixed invalid cannon propellant combinations due to spelling mistake in data pack folder name
- Fixed cannon loader pushing without head
- Fixed lag from cannon being tested during explosion, courtesy of Endalion
- Fixed Disable All Failures config option not disabling squibbing
- Fixed manual autocannons breaking on tick after squib
- Fixed Create Big Cannons projectiles exceeding 10 m/gt (200 m/gt) losing their velocity when loaded
- Fixed Smoke Shell and Drop Mortar Shell being invalid blocks for createbigcannons:fuzed_block block entity
- Fixed Cannon Carriage rotation info tooltip and syncing

===

0.5.4

"Now, occasionally you're going to get stuck. It's nothing to get upset about. Don't go hurling your controller at the cat, because it might throw something back, and it'll only escalate, and then, well..."
- Stephen Fry, LittleBigPlanet (2008)

Create Big Cannons 0.5.4, with more QoL features and minor fixes.
Now supports Create Fabric 0.5.1.f patch 1.

Added:
- Added ability for some base Create contraptions to load cannons*
 - Mechanical Piston, Gantry, and Rope Pulley
- Added Cannon Loader breaking features similar to Mechanical Piston
- Added block hardness compatibility with Create's Copycat blocks
- Added default autocannon rounds to search tab
- Added assembly connectivity between Cannon Mount/Cannon Carriage and unassembled cannons
- Added assembly connectivity between Yaw Controller and Cannon Mount
- Added minimum spread option to big cannon materials
- Added spread reduction option to big cannon materials
- Added tags for various Create Big Cannons munitions items
 - #createbigcannons:fuzes
 - #createbigcannons:autocannon_ammo_containers