@@ -133,8 +133,8 @@ c58a162ab33e2d4841b7ccde59fa022506ef5dcc assets/createbigcannons/blockstates/ver
 8cc31b88cd6093baa4caddb02ff7f7ff793299f4 assets/createbigcannons/blockstates/wrought_iron_cannon_end.json
 303668cdb3754018ca137ea6074801c6927d3987 assets/createbigcannons/blockstates/wrought_iron_drop_mortar_end.json
 d942040026b2849ca2153a9933e8dc0c5c39f3c9 assets/createbigcannons/blockstates/yaw_controller.json
-9e7871f0784181e19466e1216c8d56e037991be3 assets/createbigcannons/lang/en_ud.json
-a0059d66b07449b6ff332119171d0f38f2bfb7e9 assets/createbigcannons/lang/en_us.json
+6a61f450006f86068b253cfcde0624c88ba28735 assets/createbigcannons/lang/en_ud.json
+39db3482276e23b4c9206e03e4d3215dd59ab2f2 assets/createbigcannons/lang/en_us.json
 c6129d8380bcb26579fc200fc054f4a485ad9b2a assets/createbigcannons/models/block/ap_shell.json
 14e7b948a05007b8c96e35f92f0bff66427de7b8 assets/createbigcannons/models/block/ap_shot.json
 7157cc923bd4f217cb47117fbfe2b9542e367d17 assets/createbigcannons/models/block/autocannon/bronze_autocannon_spring.json
